--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             <p>We are a community of developers and tech enthusiasts in Vancouver.</p>
         </section>
 
-        <section class="community">
-            <h2>Join the Vancouver Tech Community</h2>
-            <p>Connect with like-minded developers, share knowledge, and collaborate on projects.</p>
-            <a href="https://discord.gg/hNGjcaeAbr"><button>Join now</button>
-        </section>
+       <section class="community">
+           <h2>Join the Vancouver Tech Community</h2>
+           <p>Connect with like-minded developers, share knowledge, and collaborate on projects.</p>
+           <a href="https://discord.gg/hNGjcaeAbr"><button>Join now</button></a>
+       </section>
+
     </main>
 
     <footer>
