--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <section class="community">
            <h2>Join the Vancouver Tech Community</h2>
            <p>Connect with like-minded developers, share knowledge, and collaborate on projects.</p>
-           <a href="https://discord.gg/hNGjcaeAbr"><button>Join now</button></a>
+           <a href="https://discord.gg/hNGjcaeAbr"><button>Join us on Discord</button></a>
        </section>
 
     </main>
