--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="hero">
             <h2>Welcome to Vancouver.dev</h2>
             <img src="van.png" alt="Description of the image">
-            <p>We are a community of developers and tech enthusiasts in Vancouver.</p>
+            <p>We're a vibrant tech community in Vancouver, bringing developers and tech enthusiasts together through a mix of online and in-person <a href="https://lu.ma/vancouver.dev" style="color: rgb(255, 94, 0);">events</a>.</p>
         </section>
 
        <section class="community">
