--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h2>Welcome to Vancouver.dev</h2>
             <img src="van.png" alt="Description of the image">
             <p>We're a vibrant tech community in Vancouver, bringing developers and tech enthusiasts together through a mix of online and in-person <a href="https://lu.ma/vancouver.dev" style="color: rgb(255, 94, 0);">events</a>.</p>
+            <p>Brought to you by <a href="https://thriveup.co/" style="color: rgb(255, 94, 0);">ThriveUp</a></p>
         </section>
 
        <section class="community">
