--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
         <section class="hero">
             <h2>Welcome to Vancouver.dev</h2>
             <img src="van.png" alt="Description of the image">
-            <p>We're a vibrant tech community in Vancouver, bringing developers and tech enthusiasts together through a mix of online and in-person <a href="https://lu.ma/vancouver.dev" style="color: rgb(255, 94, 0);">events</a>.</p>
+            <p>We're a vibrant tech community in Vancouver, bringing developers and tech enthusiasts together through a mix of online and IRL <a href="https://lu.ma/vancouver.dev" style="color: rgb(255, 94, 0);">events</a>.</p>
+            <iframe
+            src="https://lu.ma/embed/calendar/cal-DtrGcrXTkaREbso/events"
+            width="600"
+            height="450"
+            frameborder="0"
+            style="border: 1px solid #bfcbda88; border-radius: 4px;"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
         </section>
 
        <section class="community">
